[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-lifecycle-hooks"
version = "1.0.0"
description = "A next-generation, high-performance declarative lifecycle hooks library for Django 5.x+"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "Django>=4.2",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/django-lifecycle-next"
"Bug Tracker" = "https://github.com/yourusername/django-lifecycle-next/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/django_lifecycle_next"]
